product/standard/apollo-pro/apollo-portal/apollo-portal-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: apollo-portal
  namespace: inc
  labels:
    inc-app: apollo-portal
spec:
  replicas: 2
  selector:
    matchLabels:
      inc-app: apollo-portal
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        inc-app: apollo-portal
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    inc-app: apollo-configservice
      volumes:
        - name: apollo-portal
          configMap:
            name: apollo-portal
            items:
              - key: application-github.properties
                path: application-github.properties
              - key: apollo-env.properties
                path: apollo-env.properties
      containers:
        - name: apollo-portal
          image: 'hpy253215039/apollo-portal-server:v1.4.0'
          securityContext:
            privileged: false
          imagePullPolicy: Always
          ports:
            - protocol: TCP
              containerPort: 8070
          volumeMounts:
            - name: apollo-portal
              mountPath: /apollo-portal-server/config/application-github.properties
              subPath: application-github.properties
            - name: apollo-portal
              mountPath: /apollo-portal-server/config/apollo-env.properties
              subPath: apollo-env.properties
          readinessProbe:
            tcpSocket:
              port: 8070
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 10
          livenessProbe:
            tcpSocket:
              port: 8070
            initialDelaySeconds: 120
            periodSeconds: 15
            timeoutSeconds: 1
            failureThreshold: 10
          resources:
            limits:
              memory: 2Gi
              cpu: '1'
            requests:
              cpu: '0.1'
              memory: 1Gi
      imagePullSecrets:
        - name: inc
